Fixed social media icons on tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,11 +199,11 @@ h1 {
 }
 
 .social-links li a i {
-    width: 3rem;
-    height: 3rem;
+    width: 2rem;
+    height: 2rem;
     border-radius: 15%;
-    font-size: 1.25rem;
-    line-height: 3rem;
+    font-size: 1rem;
+    line-height: 2rem;
     text-align: center;
     color: #404141;
     background: #f6c67c;
